CSS, alignments & fixes

--- a/src/css/commonStyles.css
+++ b/src/css/commonStyles.css
@@ -1,15 +1,15 @@
 .display-web {
-    @media (max-width: 600px) {
+    @media (max-width: 640px) {
         display: none;
     }
 }
 
 .display-mobile {
-    @media (max-width: 600px) {
+    @media (max-width: 640px) {
         
     }
 
-    @media (min-width: 601px) {
+    @media (min-width: 641px) {
         display: none;
     }
 }
